--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -12,4 +12,11 @@
       <%= @geolocation.country %>
     </p>
   </div>
+
+  <div class="callout primary weather">
+    <h3>Weather</h3>
+    <p>
+      <%= @weather.weather_conditions %>
+    </p>
+  </div>
 </div>
